2024-08-31T01:38:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10641352544 # 500
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-31
* notice: last 14d: unq all: 23 33
* notice: prev accum: outdated-unq outdated-all / unq all: 3670 8231 / 3706 8270
* notice: next accum: outdated-unq outdated-all / unq all: 3676 8237 / 3706 8270
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-16] / []

2024-08-30T12:39:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10632839765 # 499
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-30
* notice: last 14d: unq all: 26 38
* notice: prev accum: outdated-unq outdated-all / unq all: 3670 8231 / 3705 8269
* notice: next accum: outdated-unq outdated-all / unq all: 3670 8231 / 3706 8270
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-08-30]

2024-08-30T01:39:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10625343046 # 498
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-30
* notice: last 14d: unq all: 26 37
* notice: prev accum: outdated-unq outdated-all / unq all: 3670 8231 / 3704 8268
* notice: next accum: outdated-unq outdated-all / unq all: 3670 8231 / 3705 8269
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [] / [2024-08-16 2024-08-29]

2024-08-29T12:40:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10615222248 # 497