@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-31T01:38:25Z",
-  "count_outdated" : 8237,
-  "uniques_outdated" : 3676,
-  "count" : 8270,
-  "uniques" : 3706,
+  "timestamp" : "2024-08-31T12:37:43Z",
+  "count_outdated" : 8238,
+  "uniques_outdated" : 3677,
+  "count" : 8275,
+  "uniques" : 3711,
   "clones" : [
-    {
-      "timestamp": "2024-08-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-08-18T00:00:00Z",
       "count": 8,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-31T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
