@@ -1,12 +1,7 @@
 {
-  "count": 33,
-  "uniques": 23,
+  "count": 37,
+  "uniques": 28,
   "clones": [
-    {
-      "timestamp": "2024-08-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-08-18T00:00:00Z",
       "count": 8,
@@ -56,6 +51,11 @@
       "timestamp": "2024-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-31T00:00:00Z",
+      "count": 5,
+      "uniques": 5
     }
   ]
 }
